hw25 на проверку